--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -1,7 +1,7 @@
 <ColorSelectScreen>
     name: "colorselect"
 
-    AnchorLayout
+    AnchorLayout:
         Image:
             size_hint: None, None
             size: 1644, 3840
