--- a/gui/load.kv
+++ b/gui/load.kv
@@ -1,7 +1,7 @@
 <LoadingScreen>
     name: "load"
 
-    AnchorLayout
+    AnchorLayout:
         Image:
             size_hint: None, None
             size: 1644, 3840
