--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -1,7 +1,7 @@
 <PlayerWindow>:
     name: "player"
 
-    AnchorLayout
+    AnchorLayout:
         Image:
             size_hint: None, None
             size: 1644, 3840
