--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -1,7 +1,7 @@
 <WelcomeWindow>
     name: "welcome"
 
-    AnchorLayout
+    AnchorLayout:
         Image:
             size_hint: None, None
             size: 1644, 3840
