--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -1,7 +1,7 @@
 <PlayerReveal>
     name: "reveal"
 
-    AnchorLayout
+    AnchorLayout:
         Image:
             size_hint: None, None
             size: 1644, 3840
