Split up code. Added confirm button when ending round sooner than intended.

--- a/codenet.kv
+++ b/codenet.kv
@@ -2,6 +2,7 @@
 #:include gui\playeramount.kv
 #:include gui\revealdirections.kv
 #:include gui\revpop.kv
+#:include gui\confirmdialog.kv
 #:include gui\logpop.kv
 #:include gui\load.kv
 #:include gui\colorselect.kv
