--- a/gui/revpop.kv
+++ b/gui/revpop.kv
@@ -20,7 +20,7 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        BoxLayout:
+        MDBoxLayout:
             size_hint: 1, 0.1
 
         MDLabel:
