Improved identity dialog. Changed file names to better understand what the file is.

--- a/codenet.kv
+++ b/codenet.kv
@@ -1,7 +1,7 @@
 #:include gui\welcome.kv
 #:include gui\playeramount.kv
 #:include gui\revealdirections.kv
-#:include gui\revpop.kv
+#:include gui\IdentityDialog.kv
 #:include gui\confirmdialog.kv
 #:include gui\logpop.kv
 #:include gui\load.kv
