--- a/gui/identitydialog.kv
+++ b/gui/identitydialog.kv
@@ -1,11 +1,13 @@
-<RevealPopup>:
+<IdentityDialog>:
     name: "test"
     auto_dismiss: False
     size_hint: 0.8, 0.5
 
     MDCard:
+        id: identity
         orientation: "vertical"
         padding: 21
+        spacing: 8
         md_bg_color: app.theme_cls.primary_color
 
         MDLabel:
@@ -24,21 +26,35 @@
             size_hint: 1, 0.1
 
         MDLabel:
+            id: whatcolor
+            text_color: C("FFFFFF")
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            adaptive_height: True
+            markup: True
+
+        MDLabel:
             id: arehacker
             text_color: C("FFFFFF")
             font_style: "Subtitle1"
             theme_text_color: "Custom"
-            size_hint_y: None
-            height: self.texture_size[1]
+            adaptive_height: True
             markup: True
 
-        MDIcon:
+        MDLabel:
+            id: haveallies
+            text_color: C("FFFFFF")
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            adaptive_height: True
+            markup: True
+
+        MDLabel:
             id: identitydes
             font_style: "Subtitle1"
             theme_text_color: "Custom"
             text_color: C("FFFFFF")
-            size_hint_y: None
-            height: self.texture_size[1]
+            adaptive_height: True
             markup: True
 
         MDBoxLayout:
