--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -13,7 +13,7 @@
         MDToolbar:
             title: "C0de.Net"
             left_action_items: [["menu", lambda x: x]]
-            right_action_items: [["refresh", lambda x: root.refresh()]]
+            right_action_items: [["information-outline", lambda x: x], ["refresh", lambda x: root.refresh()]]
 
         MDStackLayout:
             spacing: 10
