--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -22,14 +22,14 @@
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: "H4"
-                text: "Role Reveal"
+                text: "Identity Reveal"
                 halign: "center"
 
             MDSeparator:
                 color: C("FFFFFF")
 
             MDLabel:
-                text: "Please follow the [color=#FFFFFF]tracker[/color] below and [color=#FFFFFF]press[/color] the [color=#FFFFFF]button[/color] at the bottom when it's your [color=#FFFFFF]turn[/color] to check your [color=#FFFFFF]role[/color]."
+                text: "Follow the [color=#FFFFFF]tracker[/color] below and [color=#FFFFFF]press[/color] the [color=#FFFFFF]button[/color] at the bottom when it's your [color=#FFFFFF]turn[/color] to check your [color=#FFFFFF]identity[/color]."
                 adaptive_height: True
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
