--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -33,7 +33,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
-                text: "[color=#FFFFFF]Welcome[/color] to a [color=#FFFFFF]social deduction[/color] card game that relies on an App to [color=#FFFFFF]function[/color] properly. This App is still [color=#FFFFFF]under development[/color]; therefore, you may experience lack of [color=#FFFFFF]content[/color], incomplete [color=#FFFFFF]features[/color], and [color=#FFFFFF]bugs[/color]."
+                text: "Welcome to [color=#FFFFFF]C0de.Net[/color], a [color=#FFFFFF]social deduction[/color] card game that must be used with this [color=#FFFFFF]app[/color] to function properly. This App is still [color=#FFFFFF]under development[/color]; therefore, you may experience lack of [color=#FFFFFF]content[/color], incomplete [color=#FFFFFF]features[/color], and [color=#FFFFFF]bugs[/color]."
                 halign: "center"
                 markup: True
 
