Information dialog created for player selection.

--- a/codenet.kv
+++ b/codenet.kv
@@ -4,6 +4,7 @@
 #:include dialogs\IdentityDialog.kv
 #:include dialogs\confirmdialog.kv
 #:include dialogs\logdialog.kv
+#:include dialogs\playerdialog.kv
 #:include gui\load.kv
 #:include gui\colorselect.kv
 #:import C kivy.utils.get_color_from_hex
