--- a/dialogs/playerdialog.kv
+++ b/dialogs/playerdialog.kv
@@ -21,7 +21,6 @@
             color: C("FFFFFF")
 
         MDBoxLayout:
-#            md_bg_color: app.theme_cls.primary_dark
             orientation: "vertical"
             spacing: 5
 
@@ -46,15 +45,6 @@
                 adaptive_height: True
                 markup: True
 
-            MDLabel:
-                halign: "left"
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                text: f"[color=#1565c0][font=Icons]{md_icons['account']}[/font][/color]: Players"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
-
             MDSeparator:
                 color: C("FFFFFF")
 
@@ -63,7 +53,7 @@
                 halign: "center"
                 text_color: C("FFFFFF")
                 font_style: "Subtitle1"
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 4 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-4-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 4 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][/font][/size]"
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
@@ -76,7 +66,7 @@
                 adaptive_height: True
                 markup: True
                 md_bg_color: app.theme_cls.primary_dark
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 5 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-5-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 5 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-1-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][/font][/size]"
 
             MDLabel:
                 md_bg_color: app.theme_cls.primary_dark
@@ -86,7 +76,7 @@
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 6 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-6-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 6 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][/font][/size]"
 
             MDLabel:
                 halign: "center"
@@ -96,7 +86,7 @@
                 adaptive_height: True
                 markup: True
                 md_bg_color: app.theme_cls.primary_dark
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 7 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-7-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 7 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][/font][/size]"
 
             MDLabel:
                 md_bg_color: app.theme_cls.primary_dark
@@ -106,7 +96,7 @@
                 text_color: C("FFFFFF")
                 adaptive_height: True
                 markup: True
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 8 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-8-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 8 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-2-circle']}[/color][/font][/size]"
 
             MDLabel:
                 halign: "center"
@@ -116,7 +106,7 @@
                 adaptive_height: True
                 markup: True
                 md_bg_color: app.theme_cls.primary_dark
-                text: f"[font=Icons]{md_icons['account-group']}[/font] 9 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-3-circle']}[/color][color=#1565c0]{md_icons['account']}{md_icons['numeric-9-circle']}[/color][/font][/size]"
+                text: f"[font=Icons]{md_icons['account-group']}[/font] 9 Players: [size=19][font=Icons]{md_icons['account']}{md_icons['numeric-0-circle']}[color=#c62828]{md_icons['account']}{md_icons['numeric-3-circle']}[/color][/font][/size]"
 
             MDBoxLayout:
 
