--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -11,6 +11,7 @@
         orientation: "vertical"
         MDToolbar:
             left_action_items: [["menu", lambda x: x]]
+            right_action_items: [["information-outline"]]
             title: "C0de.Net"
 
         MDStackLayout:
