Loads of changed. Main change is player information screen and getting rid of dialogs.

--- a/codenet.kv
+++ b/codenet.kv
@@ -4,7 +4,7 @@
 #:include dialogs\IdentityDialog.kv
 #:include dialogs\confirmdialog.kv
 #:include dialogs\logdialog.kv
-#:include dialogs\playerdialog.kv
+#:include dialogs\playerinformation.kv
 #:include dialogs\maindialog.kv
 #:include gui\load.kv
 #:include gui\colorselect.kv
@@ -19,6 +19,7 @@ WindowManager:
     ColorSelectScreen:
     PlayerReveal:
     MainWindow:
+    PlayerInfo:
 
 <MainWindow>
     name: "main"
