--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -8,6 +8,8 @@
         padding: 21
         spacing: 5
         md_bg_color: app.theme_cls.primary_color
+        border_radius: 20
+        radius: [15]
 
         MDLabel:
             text: "Identity"
