--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -7,6 +7,8 @@
         orientation: "vertical"
         padding: 21
         md_bg_color: app.theme_cls.primary_color
+        border_radius: 20
+        radius: [15]
 
         MDLabel:
             id: playerlogtitle
