--- a/dialogs/confirmdialog.kv
+++ b/dialogs/confirmdialog.kv
@@ -6,6 +6,8 @@
         orientation: "vertical"
         padding: 21
         md_bg_color: app.theme_cls.primary_color
+        border_radius: 20
+        radius: [15]
 
         MDLabel:
             text: "Are you sure?"
