--- a/gui/playerinformation.kv
+++ b/gui/playerinformation.kv
@@ -12,7 +12,7 @@
 
         MDToolbar:
             title: "Player Information"
-            left_action_items: [["close", lambda x: root.close()]]
+            right_action_items: [["close", lambda x: root.close()]]
 
         MDBoxLayout:
             orientation: "vertical"
